--- a/crypto_clustering.ipynb
+++ b/crypto_clustering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "e7424331",
+   "id": "56db0fc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "61a4d703",
+   "id": "d8820239",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "a5cbc15e",
+   "id": "e59661cf",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "9f4b365c",
+   "id": "b4046e47",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "c0a6f9a7",
+   "id": "9cc7c6aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "64701f9d",
+   "id": "c159e8f3",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2df2dfff",
+   "id": "d5dc7a20",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "7003f0af",
+   "id": "98aa8b84",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8b01b0d6",
+   "id": "1537c1c1",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "7543b575",
+   "id": "d6becfe7",
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "267f2051",
+   "id": "b522154b",
    "metadata": {},
    "outputs": [
     {
@@ -1524,8 +1524,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 126,
+   "id": "158d8c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using PCA to reduce dimension to three principal components.\n",
+    "\n",
+    "# Initialize PCA Model\n",
+    "pca = PCA(n_components=3)\n",
+    "\n",
+    "# Get two principal components for the iris data.\n",
+    "crypto_pca = pca.fit_transform(x_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "a3017dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC 1</th>\n",
+       "      <th>PC 2</th>\n",
+       "      <th>PC 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>-0.326590</td>\n",
+       "      <td>0.990634</td>\n",
+       "      <td>-0.594174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>-0.309915</td>\n",
+       "      <td>0.990870</td>\n",
+       "      <td>-0.594619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1337</th>\n",
+       "      <td>2.312136</td>\n",
+       "      <td>1.713584</td>\n",
+       "      <td>-0.687804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BTC</th>\n",
+       "      <td>-0.152436</td>\n",
+       "      <td>-1.303387</td>\n",
+       "      <td>0.206678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ETH</th>\n",
+       "      <td>-0.157291</td>\n",
+       "      <td>-1.980472</td>\n",
+       "      <td>0.323302</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          PC 1      PC 2      PC 3\n",
+       "42   -0.326590  0.990634 -0.594174\n",
+       "404  -0.309915  0.990870 -0.594619\n",
+       "1337  2.312136  1.713584 -0.687804\n",
+       "BTC  -0.152436 -1.303387  0.206678\n",
+       "ETH  -0.157291 -1.980472  0.323302"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame with the three principal components.\n",
+    "\n",
+    "# Transform PCA data to a DataFrame\n",
+    "pcs_df = pd.DataFrame (\n",
+    "    data  = crypto_pca, columns = [\"PC 1\", \"PC 2\", \"PC 3\"], index=x.index\n",
+    ")\n",
+    "pcs_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4b4977a0",
+   "id": "242812e7",
    "metadata": {},
    "outputs": [],
    "source": []
